--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,14 +2,14 @@
 
 .App {
   // text-align: center;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   &__header {
     background-color: $secondary;
     display: flex;
     flex-direction: column;
     color: white;
-    position: sticky;
+    // position: sticky;
     &__title {
       // border: 1px solid red;
       width: 15%;
@@ -33,15 +33,12 @@
   &__main {
     &__content {
       &__subtitle {
-        border: 1px solid red;
         width: 75%;
         margin: auto;
         h2 {
-          border: 1px solid blue;
           text-align: center;
         }
         &__desc {
-          border: 1px solid green;
           width: 45%;
           display: flex;
           flex-direction: column;
@@ -58,58 +55,96 @@
           text-align: center;
           font-size: 2rem;
         }
-        &__list {
-          border: 1px solid black;
+        img {
           width: 75%;
+          margin: auto;
+          display: block;
+          object-fit: contain;
+        }
+        &__list {
+          
+          width: 75%;
+          min-height: 60vh;
           margin: auto;
           display: flex;
           flex-direction: column;
-          &--1, &--2, &--3, &--4, &--5 {
-            border: 1px solid green;
-            width: 75%;
-            height: 100%;
-            margin: auto;
-            height: 40vh;
-            margin-bottom: 1rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            h2 {
-              // width: 100%;
-              border: 1px solid red;
-            }
-            &__activity {
-              display: flex;
-              flex-wrap: wrap;
-              justify-content: space-around;
-              // border: 1px solid blue;
+          &__item {
+            &-1, &-2 {
               width: 100%;
-              p {
-                margin: 0;
-                display: inline;
-                width: 45%;
-                height: 90%;
-                font-size: 1.5rem;
-                text-align: left;
-                font-style: italic;
-                border: 1px solid brown;
-                a {
-                  display: block;
-                  color: $primary;
-                  text-decoration: none;
-                  &:hover {
-                    text-decoration: underline;
+              height: 50vh;
+              border: 2px solid $primary;
+              border-radius: 8px;
+              display: flex;
+              justify-content: space-between;
+              position: relative;
+              margin-bottom: 2rem;
+              &__left {
+                width: 50%;
+                min-height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                &__title {
+                  width: 60%;
+                  height: 20vh;
+                  display: flex;
+                  flex-direction: column;
+                  position: relative;
+                  margin-bottom: 1.5rem;
+                  h3 {
+                    font-size: 1.5rem;
+                    margin-left: 1rem;
+                    position: absolute;
+                    top: 2%;
+                  }
+                  h4 {
+                    position: absolute;
+                    font-size: 1.2rem;
+                    margin-left: 1rem;
+                    bottom: 0;
+                  }
+                  img {
+                    position: absolute;
+                    right: 5%;
+                    top: 5%;
+                    width: 15%;
+                    object-fit: contain;
+                  }
+                }
+                &__desc {
+                  border-top: 1px solid $primary;
+                  width: 80%;
+                  min-height: 70%;
+                  margin: auto;
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: space-around;
+                  p {
+                    font-style: italic;
+                    font-size: 1rem;
+                    text-align: left;
+                  }
+                  a {
+                    text-decoration: none;
+                    color: $primary;
+                    margin-bottom: 2rem;
+                    &:hover {
+                      text-decoration: underline;
+                    }
                   }
                 }
               }
-              img {
-                height: 90%;
-                border: 1px solid brown;
-                max-width: 25%;
-                object-fit: contain;
+              &__right {
+                width: 50%;
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                }
               }
             }
           }
+          
         }
       }
     }
@@ -118,6 +153,7 @@
     width: 75%;
     margin: auto;
     text-align: center;
+    position: sticky;
     a {
       text-decoration: none;
       color: $primary;
@@ -126,11 +162,17 @@
       }
     }
   }
+  &__contact {
+    bottom: 5%;
+    left: 10%;
+  }
   &__footer {
     width: 20%;
     display: flex;
     justify-content: space-between;
     margin-top: 1rem;
+    bottom: 0;
+    left: 37%;
     button {
       border: none;
       background-color: transparent;
@@ -157,3 +199,4 @@
     display: none;
   }
 }
+
