--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -50,10 +50,18 @@
         }
       }
       &__description {
-        border: 1px solid red;
+        // border: 1px solid red;
+        margin-top: 5rem;
         p {
+          width: 38%;
+          margin: auto;
+          margin-bottom: 2rem;
           text-align: center;
           font-size: 2rem;
+          span {
+            color: $primary;
+            font-weight: bold;
+          }
         }
         img {
           width: 75%;
@@ -74,6 +82,7 @@
               height: 50vh;
               border: 2px solid $primary;
               border-radius: 8px;
+              box-shadow: 1px 1px 2px 0px $primary;
               display: flex;
               justify-content: space-between;
               position: relative;
@@ -120,13 +129,15 @@
                   margin: auto;
                   display: flex;
                   flex-direction: column;
-                  justify-content: space-around;
                   p {
+                    margin: 2rem 0 ;
+                    width: 100%;
                     font-style: italic;
                     font-size: 1rem;
                     text-align: left;
                   }
                   a {
+                    margin-top: 25%;
                     text-decoration: none;
                     color: $primary;
                     margin-bottom: 2rem;
@@ -138,7 +149,7 @@
               }
               &__right {
                 width: 50%;
-                img {
+                video, img {
                   width: 100%;
                   height: 100%;
                   object-fit: cover;
@@ -147,6 +158,28 @@
             }
           }
           
+        }
+        &__reservation {
+          width: 75%;
+          margin: auto;
+          margin-bottom: 5rem;
+          text-align: center;
+          h3 {
+            color: $primary;
+            width: 100%;
+            font-size: 1.5rem;
+            font-weight: bold;
+          }
+          h4 {
+            color: $tertiary;
+            width: 100%;
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+          }
+          &__calendar {
+            width: 100%;
+            margin-top: 3rem;
+          }
         }
       }
     }
@@ -157,6 +190,7 @@
     text-align: center;
     position: sticky;
     a {
+      display: block;
       text-decoration: none;
       color: $primary;
       &:hover {
@@ -184,6 +218,10 @@
       }
     }
   }
+}
+
+.react-calendar{
+  margin-left: 35%;
 }
 
 
