--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,3 +1,9 @@
-$primary : #EE9F21;
-$secondary: #DFE0DF;
-$tertiary: #AB8B67;
+$primary-light: #F6C670;
+$secondary: #99835C;
+$tertiary: #363636;
+
+$fire : #DCA343;
+$makeup : #00C3CB;
+$massage: #16C34A;
+$hypno : #845EC2;
+
