WIP | Return to EMAILJS before switch to SendGrid email, switch project in prod mode

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -3,7 +3,7 @@ $secondary: #99835C;
 $tertiary: #363636;
 
 $fire : #DCA343;
-$makeup : #00C3CB;
+$makeup : #953442;
 $massage: #16C34A;
 $hypno : #845EC2;
 
