--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -580,6 +580,17 @@
                   }
                 }
               }
+              &-4 {
+                &__left {
+                  &__title {
+                    h4 {
+                      // font-size: 1rem !important;
+                      padding: 1.5em 0 0 0;
+                    }
+                    
+                  }
+                }
+              }
             }
             
           }
@@ -738,6 +749,18 @@
                     }
                   }
                 }
+                &-4 {
+                  &__left {
+                    &__title {
+                      h4 {
+                        font-size: .5rem !important;
+                        margin-top: 1.5rem !important;
+                        padding: 0 !important;
+                      }
+                      
+                    }
+                  }
+                }
               }
               
             }
@@ -885,6 +908,18 @@
                           text-decoration: underline;
                         }
                       }
+                    }
+                  }
+                }
+                &-4 {
+                  &__left {
+                    &__title {
+                      h4 {
+                        font-size: .5rem !important;
+                        margin-top: 1.5rem !important;
+                        padding: 0 !important;
+                      }
+                      
                     }
                   }
                 }
@@ -1050,6 +1085,18 @@
                     }
                   }
                 }
+                &-4 {
+                  &__left {
+                    &__title {
+                      h4 {
+                        font-size: .5rem !important;
+                        margin-top: 2rem !important;
+                        padding: 0 !important;
+                      }
+                      
+                    }
+                  }
+                }
               }
               
             }
@@ -1209,6 +1256,192 @@
                           text-decoration: underline;
                         }
                       }
+                    }
+                  }
+                }
+                &-4 {
+                  &__left {
+                    &__title {
+                      h4 {
+                        font-size: .5rem !important;
+                        margin-top: 1.5rem !important;
+                        padding: 0 !important;
+                      }
+                      
+                    }
+                  }
+                }
+              }
+              
+            }
+          }
+        }
+      }
+      &__footer {
+        font-size: .75rem;
+        &__content {
+          width: 35%;
+        }
+      }
+    }
+  }
+
+  /* Styles pour les écrans de 512px et plus petits */
+  @media (max-width: 512px) {
+    .App {
+      &__header {
+        justify-content: space-between;
+        font-size: .8rem;
+        &__title {
+          width: 50%;
+    
+          a {
+            h1 {
+              font-size: 1rem;
+              margin-top: 1rem;
+            }
+            
+            
+            img {
+              margin-right: 0;
+              width: 30%;
+            }
+          }
+        }
+        &__login {
+          margin-right: 0;
+          width: 50%;
+          form {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+            gap: 0.5em;
+            input {
+              border: 1px solid $primary-light;
+              color: $tertiary;
+              padding: 0.5em; 
+              outline: none; 
+      
+              &:focus {
+                border-color: darken($primary-light, 10%);
+              }
+            }
+            button {
+              background-color: $primary-light;
+              color: white;
+              border: none;
+              padding: 0.5em 1em;
+              border-radius: 0.5em;
+              font-weight: bold;
+              cursor: pointer;
+              &:hover {
+                background-color: white;
+                color: $primary-light;
+                border: 2px solid $primary-light;
+              }
+            }
+          }
+
+          &__greeting {
+            display: flex;
+            flex-direction: column;
+            gap: 0;
+          
+            &__text {
+              color: green;
+              text-align: center;
+              margin-right: 1rem;
+            }
+          
+            &__button {
+              margin-bottom: 1rem;
+            }
+          }
+          
+        }
+      }
+
+      &__main {
+        margin-top: 8rem;
+        &__content {
+          &__subtitle {
+            width: 100% !important;
+            h2 {
+              font-size: 1.6rem;
+            }
+
+            &__desc {
+              width: 80% !important;
+              p {
+                font-size: .75rem;
+                line-height: 1.1;
+              }
+
+              h3 {
+                font-size: .95rem;
+              }
+            }
+          }
+          &__description {
+            p {
+              width: 80% !important;
+              font-size: 1.6rem;
+            }
+            &__list {
+              width: 90%;
+              &__item {
+                &-1, &-2, &-3, &-4 {
+                  &__left {
+                    &__title {
+                      width: 90%;
+                      height: 1vh !important;
+                      margin-top: .5rem !important;
+                      h3 {
+                        font-size: .6rem;
+                      }
+                      h4 {
+                        font-size: .6rem;
+                        margin-top: 2.5rem;
+                      }
+
+                      img {
+                        width: 25%;
+                      }
+                      
+                    }
+                    &__desc {
+                      p {
+                        margin-top: 4.5rem !important;
+                        font-size: .7rem !important;
+                      }
+                      
+                      &__link {
+                        margin-top: 0;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-around;
+                        align-items: center;
+                        h5 {
+                          font-size: .7rem !important;
+                        }
+                        a {
+                          font-size: .7rem !important;
+                          text-decoration: underline;
+                        }
+                      }
+                    }
+                  }
+                }
+                &-4 {
+                  &__left {
+                    &__title {
+                      h4 {
+                        font-size: .5rem !important;
+                        margin-top: 1.5rem !important;
+                        padding: 0 !important;
+                      }
+                      
                     }
                   }
                 }
